cka/namespace.def.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-env
spec:	# optional
  hard:
    pods: "10"
    requests.cpu: "4"
    requests.memory: 5Gi
    limits.cpu: "10"
    limits.memory: 10 Gi
