cka/daemon-set-def.v2.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: elasticsearch
  labels:
    app: daemonset
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: es
        image: registry.k8s.io/fluentd-elasticsearch:1.20
