cka/deamon-set-definition.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name:  monitoring-daemon
spec:
  selector:
    matchLavels:
      app: monitoring-agent
  template:
    metadata:
      labels:
        app: monitoring-agent
    spec:
      containers:
      - name: monitoring-agent
        image: monitoring-agent
