cka/multipod-def.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mycomplicated-pod
  labels:
    app: web-app
    tier: front-end
    agent: logs
spec:
  containers:
  - name: nginx-web
    image: nginx
    command: ["tree"]
    args: ["-L", "2"]
  - name: log-agent
    image: log-agent
    command: ["tail -f"]
  volumes:
  - name: app-volume
  resources:
    requests:
      memory: "1Gi"
      cpu: 1
    limits:
      memory: "2Gi"
      cpu: 2
