cka/pod-def-with-priority.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app: web-app
    tier: front-end
spec:
  priorityClassName: high-priority
  containers:
  - name: nginx-web
    image: nginx
    resources:
      requests:
        memory: "1Gi"
        cpu: 6
  schedulerName: my-custom-scheduler
