cka/pod-definition.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app: web-app
    tier: front-end
spec:
  containers:
  - name: nginx-web
    image: nginx
    command: ["tree"]
    args: ["-L", "2"]
  volumes:
  - name: app-secret-volume
    secret:
      secretName: app-secret
  resources:
    requests:
      memory: "1Gi"
      cpu: 1
    limits:
      memory: "2Gi"
      cpu: 2 
  schedulerName: my-custom-scheduler
  tolerations:
  - key: "app"
    operator: "Equal"
    value: "blue"
    effect: "NoSchedule"
  nodeSelector:
    size: Small
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: disktype
            operator: In
            values:
            - ssd
