cka/service-def.clusterIP.yml
apiVersion: v1
kind: Service
metadata:
  name: back-end
spec:
  type: ClisterIP
  ports:
   - targetPort: 5000
     port: 5000
  selector:
    app: myapp
    tier: back-end
