cka/service-def.loadBalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: LoadBal-service
spec:
  type: LoadBalancer
  ports:
  - targetPort: 80
    port: 80
    nodePort: 30008
  selector:		# in this case, we set lables of diserable pod-s
    app: web-app
    tier: front-end
