cka/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:                  # set what pod will use this policy
    matchLabels:
      role: db
  policyTypes:                  # set allowed net.traffic 
  - Ingress
  - Egress			# can be usefull when have external requests
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: api-pod
      namespaceSelector:
        matchLabels:
          name: prod		# name of needed namespace 
    - ipBlock:
        cidr: 192.168.5.10/32	# create possibilities to allow access from outside the cluster 
    ports:
    - protocol: TCP
      port: 3306
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.5.10/32
    ports:
    - protocol: TCP
      port: 80
  - ports:                      # definetily reccomended for name resolution ability
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
